--- a/Nexflow_template/nextflow.config
+++ b/Nexflow_template/nextflow.config
@@ -2,12 +2,12 @@ params {
     workdir = '/N/scratch/chriscs/Project_A/NF_work/'  // intermediate files, large, bulky; nuke often
     pubdir    = '/N/slate/chriscs/Project_A/'  // copy some outputs to longterm storage
     condadir   = '/N/u/chriscs/Software/miniconda3/envs/env_A/'  // conda env
-    repo       = "/N/u/chriscs/Software/repo_A/"  // code and scripts
-    queueSize = 100  // max jobs in slurm queue (limit at IU is 500 including the 1 running main.nf)
+    //repo       = "/N/u/chriscs/Software/repo_A/"  // code and scripts
+    queueSize = 100  // limit concurrent jobs in slurm queue (max at IU is 500 including the 1 running main.nf)
 }
 
 executor {
-    executor = 'local'
+    executor = 'local'  // develop locally
 //    name = 'slurm'
     queueSize = params.queueSize
     pollInterval = '1 sec'
@@ -15,9 +15,9 @@ executor {
 
 process {
     clusterOptions = '--account=c01988'  // slurm account
-    cpus = 1  // (specify "1" on cluster to avoid using all available cores on every node)
+    cpus = 1  // specify "1" on cluster to avoid using all available cores on every node
 }
 
 workDir = params.workdir
-
+resume = true
 
